# software_v2

./: old jason.py
auv/src/cauv_cangate/: CMakeLists.txt
auv/src/cauv_cangate/msg/: msg_motor_command.msg
auv/src/cauv_cangate/src/: cauv_cangate.cpp
auv/src/cauv_control/: CMakeLists.txt  package.xml
auv/src/cauv_control/msg/: msg_PIDTarget.msg
auv/src/cauv_control/src/: control.h  pid.cpp  pid.h
auv/src/cauv_gamepad/: CMakeLists.txt  control_op.cpp  package.xml
auv/src/cauv_gamepad/src/: control_op.cpp
auv/src/cauv_priority_mgr/: CMakeLists.txt  package.xml
auv/src/cauv_priority_mgr/src/: cauv_priority_mgr.cpp  mgr_requeststack.cpp  mgr_requeststack.h
auv/src/cauv_priority_mgr/srv/: srv_control_command.srv
auv/src/cauv_sbgimu/: CMakeLists.txt  package.xml
auv/src/cauv_sbgimu/src/: cauv_sbgimu.cpp  sbg_imu.cpp  sbg_imu.h
src/auv/cauv_cangate/: CMakeLists.txt  package.xml
src/auv/cauv_cangate/msg/: msg_motor_demand.msg  msg_pressure_status.msg
src/auv/cauv_cangate/src/: cauv_cangate.cpp
src/auv/cauv_control/: CMakeLists.txt  cauv_control_launch.launch  package.xml
src/auv/cauv_control/msg/: msg_float_rotation_matrix.msg
src/auv/cauv_control/src/: control.cpp  control.h  pid.cpp  pid.h
src/auv/cauv_sbgimu/: CMakeLists.txt  cauv_sbgimu.launch
src/auv/cauv_sbgimu/src/: cauv_sbgimu.cpp  sbg_imu.cpp  sbg_imu.h
src/auv/cauv_sbgimu/src/sbg/: sbgCom.h
src/auv/cauv_sbgimu/src/sbg/protocol/: protocolOutputMode.h
src/controller/cauv_gamepad/: CMakeLists.txt  cauv_gamepad.launch  control_op.launch  controller.launch  real.machine
src/controller/cauv_gamepad/src/: control_op.cpp
src/utility/: time.cpp
src/utility/include/utility/: time.h
