<?xml version="1.0"?>
<package>
  <name>cauv_cangate</name>
  <version>0.0.1</version>
  <description>Manages CAN connectivity to the MCB and pressure sensors</description>
  <maintainer email="ard61@cam.ac.uk">Antoine Dupuis</maintainer>
  <license>TODO</license>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <export></export>
</package>
