<?xml version="1.0"?>
<package>
  <name>cauv_control</name>
  <version>0.0.0</version>
  <description>PID Control Loops for the AUV!</description>
  <maintainer email="ard61@cam.ac.uk">Antoine Dupuis</maintainer>
  <license>TODO</license>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cauv_utility</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cauv_utility</run_depend>
  <export></export>
</package>